@@ -1104,7 +1104,7 @@ or download the
     <title>GStreamer Plugins 0.8.2 "Kristiansand" released</title>
     <content>
 <p>
-The GStreamer team is not as proud as usual to announce a new stable release
+The GStreamer team is proud to announce a new stable release
 of the GStreamer Plugins 0.8.x series.
 </p>
 <p>
