@@ -1,0 +1,49 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-ffmpeg</module>
+  <module-fancy>GStreamer FFmpeg</module-fancy>
+  <name>Just Another Victim</name>
+  <version>0.8.1</version>
+
+  <intro>
+<p>
+The GStreamer team is happy to announce the first stable release of the
+FFmpeg-based GStreamer plugin.
+</p>
+<p>
+This module is separated from GStreamer Plugins for easier maintenance
+and decoupled release cycles.
+Our CVS contains both the patched source code to FFmpeg, as well as the
+set of patches against upstream CVS, so we can send patches upstream
+regularly from our modifications.
+</p>
+  </intro>
+  <features>
+    <feature>codecs for most popular formats</feature>
+    <feature>optimized colorspace conversion</feature>
+  </features>
+  <contributors>
+    <person>Ronald Bultje</person>
+    <person>Benjamin Otte</person>
+    <person>David Schleef</person>
+    <person>Jeremy Simon</person>
+    <person>Stephane Loeuillet</person>
+    <person>Tim-Philipp Müller</person>
+    <person>Thomas Vander Stichele</person>
+  </contributors>
+  <bugs>
+    <bug>
+      <id>136493</id>
+      <summary>compile error in gst-ffmpeg</summary>
+    </bug>
+    <bug>
+      <id>138985</id>
+      <summary>minor mem leak in gstffmpegdemux.c</summary>
+    </bug>
+    <bug>
+      <id>139460</id>
+      <summary>Compile error with gcc 2.95</summary>
+    </bug>
+  </bugs>
+</release>
